---
title: marsAI Project - Entity Relationship Diagram (ERD)
config:
    layout: elk
---
erDiagram
    users {
      INT           id            PK
      string(80)    email         UK             
      string(255)   password_hash     "NOT NULL"
      enum          role              "NOT NULL (admin, filmmaker, screener, jury)"
      string(60)    first_name        "NOT NULL"
      string(255)   last_name         "NOT NULL"
      TEXT          bio
      string(255)   photo
      date          created_at        "TIMESTAMP"
      date          updated_at        "TIMESTAMP"
    }
    films {
      INT            id            PK
      VACHAR(255)    name          UK
      VARCHAR(255)   video_url     UK
      VARCHAR(255)   poster_url
      TEXT           description
      ENUM           status            "NOT NULL (see: https://github.com/ebouchut/mars-ai-project/issues/22)"
    }
    nominations {
      INT             id           PK

      INT             film_id      FK "Composite UK part 1/2"
      INT             award_id     FK "Composite UK part 2/2"

      ENUM            status          "pending, nominated, winner, runner_up"
    }
    awards {
      INT             id           PK
      INT             partner_id   FK
      VARCHAR(30)     name         UK
      TEXT            description
      DECIMAL(10)     amount           "DECIMAL(10,2)"
      ENUM            amount_currency
    }
    screenings {
        INT           id            PK
        
        INT           user_id   FK
        INT           film_id       FK
        
        ENUM          status        "selected, rejected, pending_consensus"
    }
    user_social_networks {
        INT           id                 PK

        INT           user_id            FK, UK "Composite unique key part 1/3"
        INT           social_network_id  FK, UK "Composite unique key part 2/3"

        VARCHAR(255)  profile_url        UK     "Composite unique key part 3/3"       
    }
    social_networks {
        INT           id            PK
        VARCHAR(100)  name
        VARCHAR(255)  url           UK
    }
    works {
        INT           id            PK
        INT           user_id       FK "(filmmaker)"
        DATE          date
        VARCHAR(100)  name          UK "compound Unique Key (name + url)"
        VARCHAR(255)  url           UK "compound Unique Key (name + url)"
        TEXT          description
    }
    votes {
        INT           id            PK

        INT           user_id       FK "Unique constraint part 1/3 (jury)"
        INT           film_id       FK "Unique constraint part 2/3"
        INT           award_id      FK "Unique constraint part 2/3"

        INT           score            "NOT NULL (BETWEEN 1 AND 10)"
        TEXT          comment          "NOT NULL"
        TIMESTAMP     created_at       "NOT NULL"
        TIMESTAMP     updated_at       "NOT NULL"
    }
    partners {
        INT           id            PK
        VARCHAR(100)  name          UK
        VARCHAR(255)  description
        VARCHAR(255)  url              "NOT NULL"
        VARCHAR(255)  logo             "NOT NULL"
        INT           order            "display order"
        TIMESTAMP     created_at       "NOT NULL"
        TIMESTAMP     updated_at       "NOT NULL"
    }
    film_production_tools {
        INT           film_id             PK,FK
        INT           production_tool_id  PK,FK
    }
    production_tools {
        INT           id            PK
        VARCHAR(100)  name          UK
        TEXT          description
        VARCHAR(255)  url
    }
    newsletters {
        INT           id                 PK
        VARCHAR(100)  name               UK
        TIMESTAMP     last_published_at
        TIMESTAMP     created_at            "NOT NULL"
        TIMESTAMP     updated_at            "NOT NULL"
    }
    newsletter_subscriptions {
        INT           id                 PK
        INT           newsletter_id      FK
        VARCHAR(255)  email              UK
        ENUM          status                 "NOT NULL, (pending, subscribed, unsubscribed, error)"
        TIMESTAMP     subscribed_at          "NOT NULL (local subscription date)"
        
        INT           esp_subscriber_id      "Subscriber id  on the Email Service Provider (ESP)"
        TIMESTAMP     esp_synced_at          "When email was last synced/registered to Email Service Provider (ESP)"
        TIMESTAMP     esp_updated_at         "ESP’s **own** last update"

        TIMESTAMP     created_at
        TIMESTAMP     updated_at
    }
    jury_invitations {
      INT           id             PK
      VARCHAR(100)  email          UK
      VARCHAR(255)  token          "NOT NULL"
      
      TIMESTAMP     created_at     "NOT NULL, DEFAULT NOW()"
      TIMESTAMP     expires_at     "NOT NULL, DEFAULT NOW() + 7 days"
      TIMESTAMP     accepted_at    "NULL"
    }
    admins {
        INT           id            PK
        VARCHAR(255)  email         UK
        VARCHAR(100)  first_name        "NOT NULL"
        VARCHAR(255)  last_name         "NOT NULL"
        VARCHAR(255) password_hash      "NOT NULL"

        TIMESTAMP     created_at       "NOT NULL"
        TIMESTAMP     updated_at       "NOT NULL"
    }

    users                 o|..o{ user_social_networks : "(filmmaker) has a profile on"
    user_social_networks  o|..o{ social_networks      : "used by"

    users      o|..o{ works           : "(jury) portfolio"

    users      ||--o{ votes           : "(jury) cast a vote"
    votes      o{--|| films           : "scores"
    votes      o{--|| awards          : "for"

    users      ||--o{ screenings      : "screens a film"
    screenings o{--|| films           : "screened by"

    films       ||--}o nominations    : "is nominated"
    nominations o{--|| awards         : "for"

    partners    o|--}o awards         : "sponsors"

    films                 ||--}o film_production_tools   : "built with"
    film_production_tools o{--|o production_tools : "used in"

    newsletters o|..o{ newsletter_subscriptions : "registers"
